V 0.18.0:
  - Redid metadata to be more minimalistic and easier to maintain
  - Substituted verification for Checkers
  - Is now more oppinionated, removed options for renaming schemes
V 0.17.0:
  - Added verification mechanisms
  - Added unit tests for metadata and verification
V 0.16.1:
  - Removed __init__ file in bin
V 0.16.0:
  - Completely redid project and metadata structure
  - Removed TUIs and GUIs
V 0.15.0:
  - Added Metadata Editor/Manager
  - Added Doki XDCC Update Searcher
  - Uses gio instead of gvfs
  - Create CLI tools for renaming and iconizing
  - Metadata is now stored in a single JSON file
  - Added episode offset functionality to XDCC Updater
  - Redid project metadata
V 0.14.0:
  - Fixed unit tests
  - Removed unnecessarily complicated metadata structure
  - Fix build process
V 0.13.0:
  - Made xdcc-update script JSON file argument optional. It now defaults to *series.json*
V 0.12.0:
  - Integrated XDCC Downloader(xdcc_dl) GUI and TUI
V 0.11.1:
  - Fixed bug that made the XDCC Update Configurator TUI store invalid JSON files
V 0.11.0:
  - Implemented XDCC Updater Configurator TUI
  - Wrote Unit Tests for 100% coverage
V 0.10.0:
  - Complete Restructure of the Program
  - GUIs now in QT
  - TUIs now in urwid
  - GUI for creating XDCC Updater Config Files
  - Unit Testing and coverage
  - Integrated with gitlab-build-scripts
V 0.9.9.5:
  - Implemented colorized printing for the XDCC downloader
  - Implemented Range Downloading in Single XDCC Downloader Script
  - XDCC Downloader Stability Improvements
  - Fixed IRC Encoding Issues
  - integrated Sentry Exception logging
V 0.9.9.4:
  - Implemented RSS opml file generator to anime updater script
V 0.9.9.3:
  - Remodelled the xdcc-dl script to be more versatile, can now specify server
V 0.9.9.2:
  - Added renaming feature for previously downloaded episodes to anime-updater
V 0.9.9.1:
  - Changed package name to toktokkie (was tok_tokkie)
  - enabled python 2 support
V 0.9.9: