@@ -1,0 +1,87 @@
+#!/usr/bin/env python
+
+"""LICENSE
+Copyright 2015 Hermann Krumrey <hermann@krumreyh.com>
+
+This file is part of toktokkie.
+
+toktokkie is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+toktokkie is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with toktokkie.  If not, see <http://www.gnu.org/licenses/>.
+LICENSE"""
+
+import argparse
+from toktokkie import Directory
+from toktokkie.metadata.components.enums import TvIdType
+
+
+def main():
+    """
+    The toktokkie-metadata-gen main method
+    :return: None
+    """
+    # noinspection PyTypeChecker
+    tv_id_types = set(map(lambda x: x.value, list(TvIdType)))
+
+    parser = argparse.ArgumentParser()
+    parser.add_argument("directory",
+                        help="The directory for which to generate "
+                             "a metadata file for")
+
+    subparser = parser.add_subparsers(required=True, dest="mode")
+
+    multi_episode_parser = subparser.add_parser(
+        "multi-episode", help="Add a multi-episode to a TV Series"
+    )
+    multi_episode_parser.add_argument("id_type", choices=tv_id_types,
+                                      help="The ID type")
+    multi_episode_parser.add_argument("season", type=int,
+                                      help="The season of the episode")
+    multi_episode_parser.add_argument("start_episode", type=int,
+                                      help="The start episode")
+    multi_episode_parser.add_argument("end_episode", type=int,
+                                      help="The end episode")
+
+    exclude_parser = subparser.add_parser(
+        "exclude", help="Add an excluded episode to a TV Series"
+    )
+    exclude_parser.add_argument("id_type", choices=tv_id_types,
+                                help="The ID type")
+    exclude_parser.add_argument("season", type=int,
+                                help="The season of the episode")
+    exclude_parser.add_argument("episode", type=int,
+                                help="The episode to exclude")
+
+    args = parser.parse_args()
+    directory = Directory(args.directory)
+
+    if args.mode == "multi-episode":
+        id_type = TvIdType(args.id_type)
+        season = args.season
+        start = args.start_episode
+        end = args.end_episode
+        directory.metadata.add_multi_episode(id_type, season, start, end)
+
+    elif args.mode == "exclude":
+        id_type = TvIdType(args.id_type)
+        season = args.season
+        episode = args.episode
+        directory.metadata.add_exclude(id_type, season, episode)
+
+    directory.metadata.write()
+
+
+if __name__ == "__main__":
+    try:
+        main()
+    except KeyboardInterrupt:
+        print("Thanks for using toktokkie!")
