@@ -1,7 +1,8 @@
 V 0.18.0:
   - Redid metadata to be more minimalistic and easier to maintain
   - Substituted verification for Checkers
-  - Is now more oppinionated, removed options for renaming schemes
+  - Is now more opinionated, removed options for renaming schemes
+  - Added CLI tools for adding multi-episodes and excludes
 V 0.17.0:
   - Added verification mechanisms
   - Added unit tests for metadata and verification
